--- a/xinitrc.in
+++ b/xinitrc.in
@@ -2,6 +2,9 @@
 
 helpersdir=@helpersdir@
 
+echo "DISPLAY=$DISPLAY"
+echo "DBUS_SESSION_BUS_ADDRESS=$DBUS_SESSION_BUS_ADDRESS"
+
 unset GPG_AGENT_INFO
 unset SSH_AUTH_SOCK
 unset GNOME_KEYRING_CONTROL
