--- a/Makefile.am
+++ b/Makefile.am
@@ -6,16 +6,13 @@ bin_SCRIPTS = $(bin_in_files:.in=)
 dist_helpersdir = $(libexecdir)/$(PACKAGE)
 dist_helpers_SCRIPTS = get-screen-dpi \
                        run-with-keyring \
-                       tweak-xwrapper
+                       tweak-xwrapper \
+                       xephyr-window
 
 helpersdir = $(libexecdir)/$(PACKAGE)
 
 helpers_scripts_in_files = xinitrc.in
 helpers_SCRIPTS = $(helpers_scripts_in_files:.in=)
-
-helpers_PROGRAMS = find-free-display \
-                   list-outputs \
-                   xephyr-window
 
 sugar-runner: sugar-runner.in
 	@sed -e "s|\@helpersdir\@|$(helpersdir)|" $< > $@
@@ -23,14 +20,36 @@ sugar-runner: sugar-runner.in
 xinitrc: xinitrc.in
 	@sed -e "s|\@helpersdir\@|$(helpersdir)|" $< > $@
 
-find_free_display_SOURCE = find-free-display.c
-find_free_display_LDADD = $(X11_LIBS)
-
-list_outputs_SOURCE = list-outputs.c
-list_outputs_LDADD = $(X11_LIBS) $(XRANDR_LIBS)
-
-xephyr_window_SOURCE = xephyr-window.c
-xephyr_window_LDADD = $(X11_LIBS) $(XRANDR_LIBS)
-
 CLEANFILES = $(bin_SCRIPTS) $(helpers_SCRIPTS)
 EXTRA_DIST = $(bin_in_files) $(helpers_scripts_in_files)
+
+lib_LTLIBRARIES = libsugarrunner.la
+
+libsugarrunner_la_CFLAGS = $(SUGAR_RUNNER_CFLAGS)
+libsugarrunner_la_LIBADD = $(SUGAR_RUNNER_LIBS)
+
+libsugarrunner_la_SOURCES = \
+    sugar-runner.c \
+    sugar-runner.h \
+    sugar-runner-window.c \
+    sugar-runner-window.h
+
+-include $(INTROSPECTION_MAKEFILE)
+
+INTROSPECTION_GIRS = SugarRunner-1.0.gir
+INTROSPECTION_SCANNER_ARGS = \
+    --identifier-prefix=SugarRunner \
+    --symbol-prefix=sugar_runner
+
+SugarRunner_1_0_gir_LIBS = libsugarrunner.la
+SugarRunner_1_0_gir_FILES = $(libsugarrunner_la_SOURCES)
+SugarRunner_1_0_gir_PACKAGES = glib-2.0
+SugarRunner_1_0_gir_EXPORT_PACKAGES = SugaRunner-1.0
+
+girdir = $(datadir)/gir-1.0
+gir_DATA = SugarRunner-1.0.gir
+
+typelibdir = $(libdir)/girepository-1.0
+typelib_DATA = SugarRunner-1.0.typelib
+
+CLEANFILES += $(gir_DATA) $(typelib_DATA)
