--- a/configure.ac
+++ b/configure.ac
@@ -1,10 +1,13 @@
 AC_INIT([sugar-runner], [0.1], [dwnarvaez@gmail.com])
 AM_INIT_AUTOMAKE([foreign])
+AC_CONFIG_MACRO_DIR([m4])
 
 AC_PROG_CC
+AC_PROG_LIBTOOL
 
-PKG_CHECK_MODULES(X11, x11)
-PKG_CHECK_MODULES(XRANDR, xrandr)
+PKG_CHECK_MODULES(SUGAR_RUNNER, x11 xrandr glib-2.0)
+
+GOBJECT_INTROSPECTION_REQUIRE([1.34.0])
 
 AC_CONFIG_FILES([Makefile])
 AC_OUTPUT
