Get dpi directly in python

--- a/Makefile.am
+++ b/Makefile.am
@@ -4,8 +4,7 @@ bin_in_files = sugar-runner.in
 bin_SCRIPTS = $(bin_in_files:.in=)
 
 dist_helpersdir = $(libexecdir)/$(PACKAGE)
-dist_helpers_SCRIPTS = get-screen-dpi \
-                       run-with-keyring \
+dist_helpers_SCRIPTS = run-with-keyring \
                        tweak-xwrapper \
                        xephyr-window
 
