Add dep of the gir on the lib
As suggested by the Makefile.introspection docs

--- a/Makefile-lib.am
+++ b/Makefile-lib.am
@@ -15,7 +15,7 @@ INTROSPECTION_GIRS = SugarRunner-1.0.gir
 INTROSPECTION_SCANNER_ARGS = \
     --identifier-prefix=SugarRunner \
     --symbol-prefix=sugar_runner
-
+SugarRunner-1.0.gir: libsugarrunner.la
 SugarRunner_1_0_gir_LIBS = libsugarrunner.la
 SugarRunner_1_0_gir_FILES = $(libsugarrunner_la_SOURCES)
 SugarRunner_1_0_gir_PACKAGES = glib-2.0
