--- a/scripts/sugar-runner.in
+++ b/scripts/sugar-runner.in
@@ -61,17 +61,8 @@ def _get_tty_number():
 
 # Setup an unencrypted keyring so that it
 # doesn't bother us with password dialogs 
-def _setup_keyring():
-    home = os.environ.get("XDG_DATA_HOME", None)
-    if home is None:
-        raise RuntimeError("XDG_DATA_HOME must be defined.")
-
-    try:
-        os.makedirs(home)
-    except OSError:
-        pass
-
-    keyrings_dir = os.path.join(home, "keyrings")
+def _setup_keyring(data_home_dir):
+    keyrings_dir = os.path.join(data_home_dir, "keyrings")
     if not os.path.exists(keyrings_dir):
         try:
             os.makedirs(keyrings_dir)
@@ -86,8 +77,31 @@ def _setup_keyring():
                     "display-name=default\n" \
                     "lock-on-idle=false\n" \
                     "lock-timeout=0")
- 
-def _setup_variables(args):
+
+def _ensure_dir(path):
+    try:
+        os.mkdir(path)
+    except:
+        pass
+
+def _get_home_dirs(args):
+    base_home_dir = args.home_dir
+    if base_home_dir is None:
+        base_home_dir = os.path.expanduser("~/.sugar-runner")
+
+    _ensure_dir(base_home_dir)
+
+    home_dirs = {}
+
+    for home_name in ["cache", "config", "data"]:
+        home_dirs[home_name] = os.path.join(base_home_dir, home_name)
+
+    for path in home_dirs.values():
+        _ensure_dir(path)
+
+    return home_dirs
+
+def _setup_variables(args, home_dirs):
     to_unset = ["GPG_AGENT_INFO",
                 "SSH_AUTH_SOCK",
                 "GNOME_KEYRING_CONTROL",
@@ -104,17 +118,23 @@ def _setup_variables(args):
     if args.display_path is not None:
         os.environ["SUGAR_RUNNER_DISPLAY_PATH"] = args.display_path
 
+    os.environ["XDG_CACHE_HOME"] = home_dirs["cache"]
+    os.environ["XDG_DATA_HOME"] = home_dirs["data"]
+    os.environ["XDG_CONFIG_HOME"] = home_dirs["config"]
+
 parser = argparse.ArgumentParser(description="Run sugar")
 parser.add_argument("--resolution", help="screen resolution")
 parser.add_argument("--output", help="name of the output")
+parser.add_argument("--home-dir", help="path to the home directory")
 parser.add_argument("--virtual", action="store_true",
                     help="use an a virtual server")
 parser.add_argument("--display-path",
                     help="write the display number at this path")
 args = parser.parse_args()
 
-_setup_variables(args)
-_setup_keyring()    
+home_dirs = _get_home_dirs(args)
+_setup_variables(args, home_dirs)
+_setup_keyring(home_dirs["data"])    
 
 xinit_args = ["xinit", os.path.join(helpers_dir, "xinitrc"), "--"]
 display = SugarRunner.find_free_display()
