Add a desktop file

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,8 +1,10 @@
 SCRIPTSDIR = $(top_srcdir)/scripts
 LIBSRCDIR = $(top_srcdir)/lib
+DATASRCDIR = $(top_srcdir)/data
 
 EXTRA_DIST =
 CLEANFILES =
 
+include $(top_srcdir)/Makefile-data.am
 include $(top_srcdir)/Makefile-scripts.am
 include $(top_srcdir)/Makefile-lib.am
